# dagster-slurm

./: CHANGELOG.md  pyproject.toml
.github/workflows/: slides.yaml
projects/dagster-slurm/: pyproject.toml
projects/dagster-slurm/dagster_slurm/pipes_clients/: slurm_pipes_client.py
projects/dagster-slurm/dagster_slurm/resources/: compute.py
projects/dagster-slurm/dagster_slurm_test/: test_poll_timeout.py
slides/: package.json  slides.md
