[project]
name = "dagster-slurm-workspace"
version = "1.12.0"
description = "Workspace root - not published"
readme = "README.md"
authors = [{ name = "geoheil", email = "georg.heiler@ascii.ac.at" }]
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["projects/*"]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest>=8.3.4,<10",
  "pytest-mock>=3.14.0,<4",
  "pytest-cov~=7.0.0",
  "ruff>=0.12.8,<1",
  "ty>=0.0.4,<1",
  "python-semantic-release~=10.3.1",
  "commitizen~=4.8.3",
]

[tool.pixi.workspace]
platforms = ["linux-64", "osx-arm64", "osx-64", "linux-aarch64", "win-64"]
channels = ["conda-forge"]

[tool.pixi.environments]
build = { features = ["build"], solve-group = "build" }
docs = { features = ["docs"], solve-group = "docs" }

[tool.pixi.feature.build.dependencies]
dprint = ">=0.50.0,<1"

[tool.pixi.feature.build.pypi-dependencies]
uv = ">=0.8.6"
build = ">=1.3.0"
dagster-slurm = { path = "./projects/dagster-slurm", editable = true }
pytest = ">=8.3.4,<10"
pytest-cov = "~=7.0.0"
pexpect = "~=4.9.0"
ty = ">=0.0.4,<1"

[tool.pixi.feature.docs]
channels = ["conda-forge", "https://prefix.dev/brads-forge"]
[tool.pixi.feature.docs.dependencies]
nodejs = "~=24.4.1"
bun = ">=1.2.19,<2"
sphinx = "~=8.2.3"
[tool.pixi.feature.docs.pypi-dependencies]
sphinx-rtd-theme = "~=3.0.2"
autodoc-pydantic = "~=2.2.0"
sphinx-autodoc-typehints = "~=3.2.0"
myst-parser = "~=4.0.1"
sphinx-markdown-builder = ">=0.6.8,<1"
dagster-slurm = { path = "./projects/dagster-slurm", editable = true }

[tool.pixi.feature.build.tasks]
clean-lib = { cmd = "uv clean", cwd = "projects/dagster-slurm" }
release = { cmd = "uv run semantic-release publish", description = "Make new release" }

fmt = { cmd = "uv run -- ruff check --fix projects && uv run -- ruff format projects && dprint fmt", description = "Format" }
lint = { cmd = "uv run -- ruff check projects && dprint check && ty check --python .pixi/envs/build projects", description = "Lint" }
fmt-docs = { cmd = "dprint fmt docs/**/*.md", description = "Format documentation markdown" }
lint-docs = { cmd = "dprint check docs/**/*.md", description = "Check documentation markdown formatting" }
test = { cmd = "uv run -- pytest -m 'not (needs_slurm_docker or slow)' projects", description = "Run all unit tests" }
testpixi = { cmd = "pytest -m 'not (needs_slurm_docker or slow)' --cov --cov-report=term-missing projects", description = "Run all unit tests in pixi build env" }

test-integration = { cmd = "uv run -- pytest -p no:xdist --capture=no -m 'needs_slurm_docker and not slow' projects", description = "Run all integration tests" }
testpixi-integration = { cmd = "pytest -p no:xdist --capture=no -m 'needs_slurm_docker and not slow' --cov --cov-report=term-missing projects", description = "Run all integration tests in pixi build env" }
# to run a single test i.e. for verifying cancellation see
# pixi run -e build --frozen -- uv run pytest projects/dagster-slurm/dagster_slurm_test/test_cancellation.py::test_terminate_run_cancels_slurm_job -v -p no:xdist --capture=no

test-integration-slow = { cmd = "uv run -- pytest -m 'slow' projects", description = "Run all integration tests" }
testpixi-integration-slow = { cmd = "pytest -m 'slow' --cov --cov-report=term-missing projects", description = "Run all integration tests in pixi build env" }

[tool.pixi.feature.build.tasks.sync]
cmd = "uv sync --all-packages"
description = "uv sync"

[tool.pixi.feature.build.tasks.sync-lib-with-upgrade]
cmd = "uv sync --all-packages --upgrade"
description = "uv sync with upgrade"

[tool.pixi.feature.build.tasks.build-lib]
cmd = "uv build --all-packages"
cwd = "projects"
description = "Build the library (default - no clean)"

[tool.pixi.feature.build.tasks.clean-build-lib]
cmd = "uv build --all-packages"
cwd = "projects"
depends-on = ["clean-lib"]
description = "Clean cache first, then build the library"

[tool.pixi.feature.build.tasks.publish-lib]
cmd = "uv publish --token $PYPI_TOKEN"
depends-on = ["build-lib"]
description = "Publish the library"

[tool.pixi.tasks.prek-install]
cmd = "prek install"
description = "install prek hooks"

[tool.pixi.tasks.prek-run]
cmd = "prek run --all-files"
description = "run prek on all files"

[tool.pixi.tasks.start]
cwd = "examples"
cmd = "pixi run -e dev --frozen start"
description = "Start example"

[tool.pixi.feature.docs.tasks.docs-install]
cmd = "bun install"
cwd = "docs"

[tool.pixi.feature.docs.tasks.slides-install]
cmd = "bun install"
cwd = "slides"

[tool.pixi.feature.docs.tasks.docs-build-python-api]
cmd = "bun run build:api"
cwd = "docs"
[tool.pixi.feature.docs.tasks.docs-serve]
cmd = "bun run start"
cwd = "docs"
depends-on = ["docs-install", "docs-build-python-api", "docs-collect-slides"]
description = "Serve docs locally"

[tool.pixi.feature.docs.tasks.docs-build]
cmd = "bun run build"
cwd = "docs"
depends-on = ["docs-install", "docs-build-python-api", "docs-collect-slides"]
description = "Build docs for serving"

[tool.pixi.feature.docs.tasks.slides]
cmd = "bun dev"
cwd = "slides"
depends-on = ["slides-install"]
description = "start slides server"

[tool.pixi.feature.docs.tasks.slides-export-pdf]
cmd = "bun run export"
cwd = "slides"
depends-on = ["slides-install"]
description = "export hackathon slides pdf"

[tool.pixi.feature.docs.tasks.slides-export-pdf-multimodal]
cmd = "bun run export-multimodal"
cwd = "slides"
depends-on = ["slides-install"]
description = "export multimodal slides pdf"

[tool.pixi.feature.docs.tasks.slides-build]
cmd = "bun run build"
cwd = "slides"
depends-on = ["slides-install"]
description = "build static files"

[tool.pixi.feature.docs.tasks.slides-build-base]
cmd = "bun run build-base"
cwd = "slides"
depends-on = ["slides-install"]
description = "build static slides with base"

[tool.pixi.feature.docs.tasks.slides-build-multimodal-base]
cmd = "bun run build-multimodal-base"
cwd = "slides"
depends-on = ["slides-install"]
description = "build static multimodal slides with base"

[tool.pixi.feature.docs.tasks.docs-collect-slides]
cmd = "bash -lc 'set -euo pipefail; rm -rf docs/static/slides docs/static/slides-multimodal; cp -R slides/dist/. docs/static/slides; cp -R slides/dist-multimodal/. docs/static/slides-multimodal'"
depends-on = ["slides-build-base", "slides-build-multimodal-base"]
description = "Copy Slidev dist into Docusaurus static/"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
update_changelog_on_bump = false
tag_format = "v$version"

[tool.semantic_release]
version_toml = [
  "pyproject.toml:project.version",
  "projects/dagster-slurm/pyproject.toml:project.version",
]
build_command = "pixi update dagster-slurm && uv sync --all-packages && pixi run -e build --frozen build-lib && git add pixi.lock uv.lock"

commit_message = "{version} [skip ci]\n\nAutomatically generated by python-semantic-release"

[tool.semantic_release.commit_parser_options]
parse_squash_commits = true

[tool.semantic_release.branches.main]
match = "(main)"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::dagster._utils.warnings.BetaWarning",
  "ignore::dagster._utils.warnings.PreviewWarning",
]
markers = [
  "needs_slurm_docker: integration tests which need a real slurm cluster",
  "slow: particularly slow tests",
]

[tool.ty.environment]
python = ".pixi/envs/build"
python-version = "3.12"
root = ["projects"]

[tool.ty.src]
exclude = [
  "**/.pixi/**",
  "**/.venv/**",
  "**/.ruff_cache/**",
  "**/build/**",
  "**/dist/**",
]
